# ExpenseTracker

./: .expenses.db  pyproject.toml
src/expense_tracker/: main.py
src/expense_tracker/api/core/: database.py
src/expense_tracker/api/models/: expense.py
src/expense_tracker/api/routers/: expenses.py  health.py
src/expense_tracker/api/schemas/: expense.py
src/expense_tracker/api/services/: expense_service.py
tests/: test_expenses.py
